# data_structure

./: .gitignore  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  README.md  conanfile.py  meson.build  requirements.txt
bundle/: setup.py
bundle/src/: config.py
bundle/src/dependency/: graph.py  project.py  std.py
bundle/src/script/: bundle.py
doc/: Fila Encadeada.md  Fila em Arranjo Circular.md  Fila.md  Hash Encadeado.md  Hash com Endereco Aberto.md  Hash.md  Heap.md  Lista Encadeada.md  Lista.md  Max Heap.md  Min Heap.md  Pilha Encadeada.md  Pilha em Arranjo.md  Pilha.md  TAD.md  Torneio.md  Árvore Binária de Busca.md
exerciciosDredd/fila/01/: 01.cpp
exerciciosDredd/fila/03/: 03.cpp
exerciciosDredd/fila/09/: 09.cpp
exerciciosDredd/heap/08/: codigoBase.cpp
exerciciosDredd/pilha/01/: 01.cpp
exerciciosDredd/pilha/02/: 02.cpp
include/: DataStructure.h  meson.build
include/common/node/: AbstractNode.h  DoublyLinkedNode.h  Node.h  SinglyLinkedNode.h  meson.build
include/hash/: AbstractHashTable.h  Hash.h  LinkedHashTable.h  OpenAddressHashTable.h
include/hash/interface/: HashTableInterface.h
include/heap/: AbstractHeap.h  Heap.h  MaxHeap.h  MinHeap.h  Tournament.h
include/heap/interface/: HeapInterface.h
include/list/: AbstractDoublyLinkedList.h  AbstractSinglyLinkedList.h  DoublyLinkedList.h  List.h  SinglyLinkedList.h  meson.build
include/queue/: AbstractArrayQueue.h  AbstractLinkedQueue.h  ArrayQueue.h  LinkedQueue.h  Queue.h
include/stack/: AbstractArrayStack.h  AbstractLinkedStack.h  ArrayStack.h  LinkedStack.h  Stack.h
include/tree/: Tree.h
include/tree/common/: Common.h
src/: meson.build
src/common/: meson.build
src/hash/: LinkedHashTable.cpp  OpenAddressHashTable.cpp
src/heap/: AbstractHeap.cpp  MaxHeap.cpp  MinHeap.cpp  Tournament.cpp
src/list/: DoublyLinkedList.cpp  SinglyLinkedList.cpp  meson.build
src/queue/: ArrayQueue.cpp  LinkedQueue.cpp
src/stack/: ArrayStack.cpp  LinkedStack.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: main.cpp
tests/: CMakeLists.txt
tests/src/: tests.cpp
(+39 files in other folders)
